--- a/src/components/Common/Footer/style.css
+++ b/src/components/Common/Footer/style.css
@@ -1,5 +1,11 @@
 .footer{
-    width: 100%;
+    position: relative;
+    top: 20rem;
+    left: 0;
+    margin: 2rem;
+    width: 95%;
+    height: 7rem;
+    border-radius: 1rem;
     color: #fff;
     background-color: lightblue;
 }
