--- a/src/components/Common/BackToTop/style.css
+++ b/src/components/Common/BackToTop/style.css
@@ -1,7 +1,7 @@
 .back-to-top-btn{
     position: fixed;
-    bottom: 1.5rem;
-    right: 1.5rem;
+    bottom: 1rem;
+    right: 1rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -11,4 +11,5 @@
     border-radius: 50%;
     margin: 1rem;
     cursor: pointer;
+    background-color: var(--black);
 }
