--- a/src/components/Common/Footer/style.css
+++ b/src/components/Common/Footer/style.css
@@ -6,10 +6,10 @@
     margin: 3rem;
     height: auto;
     border-radius: 0.75rem;
-    background: linear-gradient(
+    background: linear-gradient( 
       90deg,
       rgba(2, 0, 36, 1) 0%,
-      rgba(31, 83, 198, 1) 0%,
+      rgb(24, 48, 99) 0%,
       rgba(0, 212, 255, 1) 100%
     );
     background-size: 400% 400%;
@@ -18,6 +18,7 @@
   
   .footer h2 {
     cursor: pointer;
+    color: var(--white);
   }
   
   .social-links {
@@ -28,7 +29,7 @@
   }
   
   .social-link {
-    color: var(--white);
+    color: var(--blue);
     font-size: 2rem !important;
     transition: all 0.2s ease-in-out !important;
   }
