--- a/src/components/Common/Header/style.css
+++ b/src/components/Common/Header/style.css
@@ -10,7 +10,9 @@
 }
 
 .logo{
-    font-size: 1.5rem;
+    font-size: 2rem;
+    color: var(--grey);
+    font-family: 'Satisfy', cursive;
 }
 
 .links{
