--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
 
 :root{
+  --yellow: #d1f508;
   --white: #fff;
   --black: #111;
-  --blue: #3a80e9;
+  --blue: #3e0863;
   --grey: #888;
   --darkgrey: #1b1b1b;
-  --green: #61c96f;
+  --green: #14da2f;
   --red: #f94141;
 }
 
