--- a/src/components/Common/Header/style.css
+++ b/src/components/Common/Header/style.css
@@ -15,6 +15,11 @@
     font-family: 'Satisfy', cursive;
 }
 
+
+.navbar h1:hover{
+    color: var(--yellow);
+}
+
 .links{
     display: flex;
     justify-content: flex-end;
