--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,22 @@
   --red: #f94141;
 }
 
+[data-theme="dark"] {
+  --white: #ffffff;
+  --black: #111;
+  --grey: #888;
+  --darkgrey: #1b1b1b;
+  --blue: #3e0863;
+}
+
+[data-theme="light"] {
+  --white: #111;
+  --black: #fff;
+  --grey: #888;
+  --darkgrey: #f3f3f3;
+  --blue: #d1f508;
+}
+
 html{
   scroll-behavior: smooth;
 }
