--- a/src/components/LandingPage/MainComponent/style.css
+++ b/src/components/LandingPage/MainComponent/style.css
@@ -49,14 +49,14 @@
 .iphone{
     position: absolute;
     z-index: 100;
-    min-width: 300px;
+    /* min-width: 300px; */
     width: 50%;
     right: 0;
 }
 
 .gradient{
     position: absolute;
-    min-width: 250px;
+    /* min-width: 250px; */
     width: 40%;
     top: 8rem;
     right: 0;
