--- a/src/components/Dashboard/Grid/style.css
+++ b/src/components/Dashboard/Grid/style.css
@@ -117,7 +117,7 @@
     transition: all 0.5s;
 }
 
-.watchlist_icon{
+/* .watchlist-icon{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -125,4 +125,38 @@
     padding: 0.6rem !important;
     border-radius: 50%;
     min-width: auto !important;
-}
+} */
+
+.watchlist-icon {
+    padding: 0.5rem;
+    display: block;
+    color: var(--green);
+    font-size: 2rem !important;
+    margin-left: auto;
+    border: 2px solid var(--green);
+    border-radius: 3rem;
+    font-weight: 600;
+  }
+  
+  .watchlist-icon:hover {
+    background-color: var(--green);
+    color: var(--white);
+    transition: all 0.3s;
+  }
+  
+  .watchlist-icon-red {
+    color: var(--red);
+    border: 2px solid var(--red);
+  }
+  
+  .watchlist-icon-red:hover {
+    background-color: var(--red) !important;
+    color: var(--white);
+    transition: all 0.3s;
+  }
+  @media only screen and (max-width: 800px) {
+    .watchlist-icon {
+      font-size: 1rem !important;
+      padding: 0.35rem;
+    }
+  }
