--- a/src/index.css
+++ b/src/index.css
@@ -95,12 +95,9 @@ img {
 
 }
 
-/* .footer{
-  position:position;
-  width: 97.5%;
-  bottom:0;
-  margin: 1rem;
-} */
+.main{
+  min-height: 100vh;
+}
 
 
 
