--- a/src/components/Common/Footer/style.css
+++ b/src/components/Common/Footer/style.css
@@ -14,6 +14,8 @@
     );
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
+    position: sticky;
+    top: 100%;
   }
   
   .footer h2 {
