--- a/src/components/Common/Header/style.css
+++ b/src/components/Common/Header/style.css
@@ -10,9 +10,9 @@
 }
 
 .logo{
-    font-size: 2rem;
-    color: var(--grey);
-    font-family: 'Satisfy', cursive;
+    font-size: 1.5rem;
+    color: var(--white);
+    font-weight: 900;
 }
 
 
